examples/test/testpolicy17423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17423
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key36: value16
      key8: value12
      key1: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value41
      podSelector:
        matchLabels:
          key25: value21
